# calypr

./: .dockerignore  .gitignore  AI-ASSISTANT-SPEC.md  API-NODE-PLAN.md  BETA-AND-WAITLIST.md  BLOG-MDX-PLAN.md  CLAUDE-PLAN.md  MCP-NODE-PLAN.md  METERING-ANALYTICS-PLAN.md  MVP-EXECUTION-PLAN.md  MVP.md  OFFICE-HOURS.md  PLAN.md  PRICING-SPEC.md  RAG-INGESTION-PLAN.md  README.md  ROADMAP-6M.md  TODO.md  WALKTHROUGH.md  WEDGE-PLAN.md  WEEK2-USAGE-PERSISTENCE-PLAN.md  WEEK3-SHARE-LINKS-PLAN.md  WEEK4-PARTNER-READINESS-PLAN.md  WEEK5-CODEGEN-EVAL-HARNESS-PLAN.md  WEEK5-ROUNDTRIP-PARSER-PLAN.md  package-lock.json  package.json  pnpm-lock.yaml  posthog-setup-report.md  pyproject.toml  railway.json  start.sh  tsconfig.base.json
.claude/: launch.json
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_baseline.py  0002_agents.py  0003_user_workspaces.py  0004_runs.py  0005_share_links.py  0006_connectors.py  0007_provider_keys.py  0008_plan_and_waitlist.py  0009_assistant_model.py  0010_default_model.py  0011_repair_saved_fake_models.py  0012_invite_granted_at.py  0013_billing.py  0014_credit_ledger.py
apps/api/scripts/: observe_billing.py  set_credits.py
apps/api/src/calypr_api/: __init__.py  assistant_models.py  billing.py  config.py  connectors.py  constants.py  credits.py  deps.py  engine.py  entitlements.py  errors.py  llm_providers.py  main.py  metering.py  middleware.py  model_access.py  oauth_state.py  posthog_client.py  pricing.py  provider_keys.py  run_access.py  schemas.py  spend.py  vault.py  workspace_model.py  workspace_settings.py
apps/api/src/calypr_api/db/: __init__.py  base.py  models.py  session.py
apps/api/src/calypr_api/routers/: agents.py  assist.py  billing.py  connectors.py  provider_keys.py  runs.py  share.py  uploads.py  waitlist.py
apps/api/tests/: conftest.py  test_assist_api.py  test_assistant_model_setting.py  test_billing.py  test_connectors.py  test_credits.py  test_db.py  test_default_model.py  test_engine_api.py  test_entitlements.py  test_errors.py  test_health.py  test_lifespan.py  test_metering.py  test_model_access.py  test_oauth_state.py  test_pricing.py  test_provider_keys.py  test_run_access.py  test_share.py  test_spend.py  test_uploads.py  test_vault.py
apps/web/: .env.example  .gitignore  next.config.ts  package.json
compute/: pnpm-lock.yaml
db/: schema.sql
e2e/: package.json  playwright.config.ts
e2e/tests/: landing.spec.ts  phase-api-tools.spec.ts  phase-assistant-model.spec.ts  phase-mcp.spec.ts  phase-settings.spec.ts  (+14 more)
infra/: CONNECTORS.md  MCP-IN-PRODUCTION.md  PRODUCTION.md
scripts/: beta-invite.sh  waitlist-export.sh
services/assistant/: pyproject.toml
services/assistant/src/calypr_assistant/: __init__.py  draft.py  events.py  fake.py  prompt.py
services/assistant/tests/: test_draft.py  test_fake.py  test_few_shot_graphs.py  test_prompt.py
services/codegen/: pyproject.toml
services/codegen/src/calypr_codegen/: __init__.py  generate.py
services/codegen/tests/: test_codegen.py
services/compiler/: pyproject.toml
services/compiler/src/calypr_compiler/: __init__.py  compile.py  golden.py  state.py  templates.py  validate.py
services/compiler/tests/: test_compile.py  test_config_panel_coverage.py  test_reflexion.py  test_templates.py  test_tools.py  test_validate.py  test_wiring_matrix.py
services/model/: pyproject.toml
services/model/src/calypr_model/: __init__.py  anthropic_client.py  base.py  events.py  factory.py  fake.py  image_client.py  messages.py  openai_client.py  tts_client.py
services/model/tests/: test_factory.py  test_fake.py  test_live_providers.py  test_multimodal.py
services/roundtrip/: README.md  pyproject.toml
services/roundtrip/src/calypr_roundtrip/: __init__.py  parse.py
services/roundtrip/tests/: _equivalence.py  conftest.py  mutations.py  test_mutations.py  test_roundtrip.py
services/runtime/: pyproject.toml
services/runtime/src/calypr_runtime/: __init__.py  checkpoint.py  demo.py  events.py  run.py
services/runtime/tests/: test_checkpoint_postgres.py  test_run.py
services/storage/: pyproject.toml
services/storage/src/calypr_storage/: __init__.py  blob.py
services/storage/tests/: test_blob.py
src/: middleware.ts
(+139 files in other folders)
