[project]
name = "calypr-api"
version = "0.0.0"
description = "Calypr API — FastAPI: auth, agents CRUD, compile, run, knowledge."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic-settings>=2.5",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "python-dotenv>=1.0",
  "calypr-runtime",
  "calypr-codegen",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "httpx>=0.27",
]

[tool.uv.sources]
calypr-runtime = { workspace = true }
calypr-codegen = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/calypr_api"]
