[project]
name = "calypr-assistant"
version = "0.0.0"
description = "Prompt -> GraphSpec: the AI assistant that drafts agent graphs from natural language."
requires-python = ">=3.12"
dependencies = [
  "calypr-dsl",
  "calypr-nodes",
  "calypr-model",
  "calypr-compiler",
]

[tool.uv.sources]
calypr-dsl = { workspace = true }
calypr-nodes = { workspace = true }
calypr-model = { workspace = true }
calypr-compiler = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/calypr_assistant"]
