[project]
name = "calypr-compiler"
version = "0.0.0"
description = "GraphSpec -> LangGraph StateGraph compiler + validation (the IP)."
requires-python = ">=3.12"
dependencies = [
  "calypr-dsl",
  "calypr-nodes",
  "calypr-model",
  "langgraph>=0.2",
  "langchain-core>=0.3",
]

[tool.uv.sources]
calypr-dsl = { workspace = true }
calypr-nodes = { workspace = true }
calypr-model = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/calypr_compiler"]
