[project]
name = "calypr-model"
version = "0.0.0"
description = "Thin ModelClient protocol + provider adapters (tool-calling + streaming)."
requires-python = ">=3.12"
dependencies = [
  "anthropic>=0.40",
  "openai>=1.50",
  "pydantic>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/calypr_model"]
