[project]
name = "calypr-roundtrip"
version = "0.0.0"
description = "Ownable LangGraph Python -> GraphSpec — the reverse round-trip (code altitude back to canvas)."
requires-python = ">=3.12"
dependencies = [
  "calypr-dsl",
]

[tool.uv.sources]
calypr-dsl = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/calypr_roundtrip"]
