[project]
name = "calypr-storage"
version = "0.0.0"
description = "Blob storage helper — uploads run artifacts (e.g. generated images) to Vercel Blob."
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/calypr_storage"]
